--- a/Chess/index.html
+++ b/Chess/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./CSS/Style.css" rel="stylesheet" type="text/css">
     <script src="./JS/jquery-3.4.1.js" type="text/javascript"></script>
     <script src="./JS/Chess.js" type="text/javascript"></script>
@@ -11,8 +13,19 @@
     <script src="./JS/App.js" type="text/javascript"></script>
     <title>Chess</title>
 </head>
+
 <body>
-    <div class="grid-container">
+    <div id="container">
+        
+        <div id="tool-bar">
+            <dive id="timer" class="tool-bar-item">00 : 00</dive>
+            <div id="steps" class="tool-bar-item">0  <img src="horse.png"></div>
+            <a href="#" class="replay"><div id="start" class="tool-bar-item"></div></a>
+            <a href="#" class="replay"><div id="replay" class="tool-bar-item"></div></a>
+        </div>
+        <!--<div id="topScore">Top scores:</div>-->
+        <div class="grid-container"></div>
     </div>
 </body>
+
 </html>
