--- a/Chess/index.html
+++ b/Chess/index.html
@@ -19,7 +19,7 @@
         
         <div id="tool-bar">
             <dive id="timer" class="tool-bar-item">00 : 00</dive>
-            <div id="steps" class="tool-bar-item">0  <img src="horse.png"></div>
+            <div id="steps" class="tool-bar-item">0  <img src="./images/horse.png"></div>
             <a href="#" class="replay"><div id="start" class="tool-bar-item"></div></a>
             <a href="#" class="replay"><div id="replay" class="tool-bar-item"></div></a>
         </div>
