--- a/Chess/index.html
+++ b/Chess/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="./CSS/Style.css" rel="stylesheet" type="text/css">
-    <script src="./JS/jquery-3.4.1.js" type="text/javascript"></script>
-    <script src="./JS/Chess.js" type="text/javascript"></script>
-    <script src="./JS/Kight.js" type="text/javascript"></script>
-    <script src="./JS/App.js" type="text/javascript"></script>
+    <link href="./css/Style.css" rel="stylesheet" type="text/css">
+    <script src="./js/jquery-3.4.1.js" type="text/javascript"></script>
+    <script src="./js/Chess.js" type="text/javascript"></script>
+    <script src="./js/Kight.js" type="text/javascript"></script>
+    <script src="./js/App.js" type="text/javascript"></script>
     <title>Chess</title>
 </head>
 
