--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./js/Chess.js" type="text/javascript"></script>
     <script src="./js/Kight.js" type="text/javascript"></script>
     <script src="./js/App.js" type="text/javascript"></script>
-    <title>Chess</title>
+    <title>The Knight</title>
 </head>
 
 <body>
