--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./js/Chess.js" type="text/javascript"></script>
     <script src="./js/Kight.js" type="text/javascript"></script>
     <script src="./js/App.js" type="text/javascript"></script>
+     <link rel="shortcut icon" type="image/x-icon" href="./images/horse.png"/>
     <title>The Knight Game</title>
 </head>
 
