--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
+    <div id="header">The<img src="./images/knight (2).png" alt="knight image">Knight</div>
     <div id="container">
-        
         <div id="tool-bar">
             <dive id="timer" class="tool-bar-item">00 : 00</dive>
             <div id="steps" class="tool-bar-item">0  <img src="./images/horse.png"></div>
