--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./js/Chess.js" type="text/javascript"></script>
     <script src="./js/Kight.js" type="text/javascript"></script>
     <script src="./js/App.js" type="text/javascript"></script>
-     <link rel="shortcut icon" type="image/x-icon" href="./images/horse.png"/>
+     <link rel="shortcut icon" type="image/x-icon" href="./images/knight (2).png"/>
     <title>The Knight Game</title>
 </head>
 
