--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#" class="replay"><div id="start" class="tool-bar-item"></div></a>
             </div>
             <dive id="timer" class="tool-bar-item">00 : 00</dive>
-            <div id="steps" class="tool-bar-item">0  <img src="./images/horse.png"></div>
+            <div id="steps" class="tool-bar-item"><img src="./images/horse.png"> 0</div>
         </div>
         <!--<div id="topScore">Top scores:</div>-->
         <div class="grid-container"></div>
