--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     <div id="header">The<img src="./images/knight (2).png" alt="knight image">Knight</div>
     <div id="container">
         <div id="tool-bar">
-            <div id="start-container">
-                <a href="#" class="replay"><div id="replay" class="tool-bar-item"></div></a>
-                <a href="#" class="replay"><div id="start" class="tool-bar-item"></div></a>
-            </div>
+            <a href="#" class="replay">
+                <div id="replay" class="tool-bar-item"></div>
+            </a>
+            <a href="#" class="replay">
+                <div id="start" class="tool-bar-item"></div>
+            </a>
             <dive id="timer" class="tool-bar-item">00 : 00</dive>
             <div id="steps" class="tool-bar-item"><img src="./images/horse.png"> 0</div>
         </div>
