--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./css/Style.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
+    <link rel="stylesheet" href="./css/smallscreen.css">
     <script src="./js/jquery-3.4.1.js" type="text/javascript"></script>
     <script src="./js/Chess.js" type="text/javascript"></script>
     <script src="./js/Kight.js" type="text/javascript"></script>
