--- a/index.html
+++ b/index.html
@@ -21,18 +21,27 @@
     <div id="header">The<img src="./images/knight (2).png" alt="knight image">Knight</div>
     <div id="container">
         <div id="tool-bar">
-
+            
+            <div id="tool-bar-frame">
             <a href="#" class="replay">
                 <div id="replay" class="tool-bar-item"></div>
             </a>
             <a href="#" class="replay">
-                <div id="start" class="tool-bar-item"></div>
+                <div id="start" class="tool-bar-item, start"></div>
             </a>
+            <div id="level">Level: 1</div>
             <dive id="timer" class="tool-bar-item"><img src="./images/timer.png"> 00 : 00</dive>
+            <div id="life-container" class="tool-bar-item">
+                <div id="life"></div>
+            </div>
             <div id="steps" class="tool-bar-item"><img src="./images/horse.png"> 0</div>
+            <div id="coins" class="tool-bar-item"><img src="./images/coin.png">00</div>
+            <!--<div id="settings-bar"></div>-->
         </div>
-        <!--<div id="topScore">Top scores:</div>-->
-        <div class="grid-container"></div>
+        </div>
+    </div>
+    <!--<div id="topScore">Top scores:</div>-->
+    <div class="grid-container"></div>
     </div>
 </body>
 
